# chAT

./: CMakeLists.txt  README.md
examples/: parser.cpp  posix_stdio_blocking.cpp  posix_stdio_nonblocking.cpp
src/: chAT.cpp  chAT.hpp  server.cpp
